--- a/README
+++ b/README
@@ -10,8 +10,9 @@ simple client.
 Dependencies
 ------------
 
-You need to have CMake version 2.8 or later and Boost version 1.35.0
-or later since Asio is required.
+- CMake version 2.8 or later 
+- Boost version 1.35.0 or later since Asio is required.
+- libssl
 
 To be able to run the unit tests, you have to have Google Test
 installed. Google Test will be automatically installed if cmake is
